2014-09-07  Paul Eggert  <eggert@cs.ucla.edu>

	Use SAFE_ALLOCA etc. to avoid unbounded stack allocation (Bug#18410).
	This follows up on the recent thread in emacs-devel on alloca; see:
	http://lists.gnu.org/archive/html/emacs-devel/2014-09/msg00042.html
	This patch also cleans up alloca-related glitches noted while
	examining the code looking for unbounded alloca.
	* alloc.c (listn):
	* callproc.c (init_callproc):
	Rewrite to avoid need for alloca.
	* buffer.c (mouse_face_overlay_overlaps)
	(report_overlay_modification):
	* buffer.h (GET_OVERLAYS_AT):
	* coding.c (make_subsidiaries):
	* doc.c (Fsnarf_documentation):
	* editfns.c (Fuser_full_name):
	* fileio.c (Ffile_name_directory, Fexpand_file_name)
	(search_embedded_absfilename, Fsubstitute_in_file_name):
	* fns.c (Fmake_hash_table):
	* font.c (font_vconcat_entity_vectors, font_update_drivers):
	* fontset.c (fontset_pattern_regexp, Ffontset_info):
	* frame.c (Fmake_terminal_frame, x_set_frame_parameters)
	(xrdb_get_resource, x_get_resource_string):
	* ftfont.c (ftfont_get_charset, ftfont_check_otf, ftfont_drive_otf):
	* ftxfont.c (ftxfont_draw):
	* image.c (xbm_load, xpm_load, jpeg_load_body):
	* keyboard.c (echo_add_key, menu_bar_items, tool_bar_items):
	* keymap.c (Fdescribe_buffer_bindings, describe_map):
	* lread.c (openp):
	* menu.c (digest_single_submenu, find_and_call_menu_selection)
	(find_and_return_menu_selection):
	* print.c (PRINTFINISH):
	* process.c (Fformat_network_address):
	* scroll.c (do_scrolling, do_direct_scrolling, scrolling_1):
	* search.c (search_buffer, Fmatch_data, Fregexp_quote):
	* sound.c (wav_play, au_play):
	* syntax.c (skip_chars):
	* term.c (tty_menu_activate, tty_menu_show):
	* textprop.c (get_char_property_and_overlay):
	* window.c (Fset_window_configuration):
	* xdisp.c (safe__call, next_overlay_change, vmessage)
	(compute_overhangs_and_x, draw_glyphs, note_mouse_highlight):
	* xfaces.c (face_at_buffer_position):
	* xmenu.c (x_menu_show):