@@ -1,5 +1,10 @@
 2014-09-07  Paul Eggert  <eggert@cs.ucla.edu>
 
+	* keyboard.c (read_decoded_event_from_main_queue): Reinstitute alloca
+	here for destination buffer, to work around what appears to be a
+	bug in decode_coding_c_string when the source and destination are
+	both C strings.
+
 	Use SAFE_ALLOCA etc. to avoid unbounded stack allocation (Bug#18410).
 	This follows up on the recent thread in emacs-devel on alloca; see:
 	http://lists.gnu.org/archive/html/emacs-devel/2014-09/msg00042.html
@@ -24,7 +29,8 @@
 	* ftfont.c (ftfont_get_charset, ftfont_check_otf, ftfont_drive_otf):
 	* ftxfont.c (ftxfont_draw):
 	* image.c (xbm_load, xpm_load, jpeg_load_body):
-	* keyboard.c (echo_add_key, menu_bar_items, tool_bar_items):
+	* keyboard.c (echo_add_key, menu_bar_items, tool_bar_items)
+
 	* keymap.c (Fdescribe_buffer_bindings, describe_map):
 	* lread.c (openp):
 	* menu.c (digest_single_submenu, find_and_call_menu_selection)
